drmmode: Use the tiled stride for the rotated pixmap.

After d41684d5459 we now allocate all framebuffers as tiled bo, and so
we must be careful to use the appropriate stride as returned from the
allocation, instead of assuming that it is just an aligned width.

Fixes:

  Bug 28461 - screen rotation results in corrupted output.
  https://bugs.freedesktop.org/show_bug.cgi?id=28461

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Reported-by: Till Matthiesen <entropy@everymail.net>